feat(model): Modelo veiculoRetorno criado
